--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -41,10 +41,17 @@
 @media (min-width: 700px) {
   .contacts__caption {
     .text-font (40px, 48px, @fw-light);
+    margin-bottom: 28px;
   }
   .contacts__map {
-    height: 370px;
-    background: @grey url(../img/map.png) 50% 100% no-repeat;
+    height: 363px;
+    background: @grey url(../img/map.png) 50% 64% no-repeat;
+  }
+  .contacts__list {
+    min-height: 84px;
+  }
+  .contacts .contacts__list dd {
+    line-height: 31px;
   }
 }
 
