--- a/less/blocks/effect.less
+++ b/less/blocks/effect.less
@@ -42,7 +42,11 @@
 
 @media (min-width: 992px) {
   .effect {
+    padding: 22px 0;
     background: #F2F2F2;
+  }
+  .effect__timer {
+    padding-left: 0;
   }
   .effect__timer svg {
     height: 360px;
@@ -52,7 +56,7 @@
   }
   .effect__timer span {
     top: 80px;
-    left: 42px;
+    left: 28px;
     width: 245px;
     height: 245px;
     font-size: 120px;
