--- a/less/style.less
+++ b/less/style.less
@@ -15,6 +15,7 @@
 // Blocks
 @import 'blocks/page-header.less';
 @import 'blocks/page-footer.less';
+@import 'blocks/page-captions.less';
 @import 'blocks/logo.less';
 @import 'blocks/btn.less';
 @import 'blocks/intro.less';
