--- a/css/style.css
+++ b/css/style.css
@@ -646,12 +646,12 @@ th {
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 960px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 960px;
   }
 }
 .container-fluid {
@@ -1431,13 +1431,6 @@ p {
     padding-left: 0;
   }
 }
-.page-caption {
-  padding: 16px 0;
-  font-size: 24px;
-  font-weight: 300;
-  line-height: 28px;
-  text-align: center;
-}
 .page-header {
   background: rgba(0, 0, 0, 0.5);
   transition: background .4s;
@@ -1594,14 +1587,6 @@ p {
   transition: -webkit-transform .5s;
   transition: transform .5s;
 }
-@media (min-width: 700px) {
-  .page-caption {
-    font-size: 40px;
-    line-height: 48px;
-    font-weight: 300;
-    padding: 0;
-  }
-}
 @media (min-width: 992px) {
   .nav-toggle {
     display: none;
@@ -1678,22 +1663,76 @@ p {
   }
 }
 @media (min-width: 1100px) {
-  .page-caption {
-    font-size: 50px;
-    line-height: 60px;
-    font-weight: 300;
+  .main-nav ul > li {
+    padding: 34px 0 41px;
   }
 }
 .page-footer {
   overflow: hidden;
 }
 .page-footer__container {
-  padding: 33px 0 0px;
+  padding: 24px 0 0px;
+}
+.page-footer__container:before,
+.page-footer__container:after {
+  content: " ";
+  display: table;
+}
+.page-footer__container:after {
+  clear: both;
+}
+.page-footer__container:before,
+.page-footer__container:after {
+  content: " ";
+  display: table;
+}
+.page-footer__container:after {
+  clear: both;
+}
+.page-footer__container:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.page-footer__container:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+@media (min-width: 700px) {
+  .page-footer__container {
+    padding: 11px 0 0;
+  }
+}
+.page-caption {
+  padding: 16px 0;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 28px;
+  text-align: center;
+}
+@media (min-width: 700px) {
+  .page-caption {
+    font-size: 40px;
+    line-height: 48px;
+    font-weight: 300;
+    padding: 0;
+  }
+  .page-caption > span {
+    display: block;
+  }
+}
+@media (min-width: 1100px) {
+  .page-caption {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 300;
+  }
 }
 .logo {
   float: left;
   margin: 0 0 0 15px;
-  padding: 16px 5px 21px;
+  padding: 6px 5px 17px;
 }
 .logo a {
   color: transparent;
@@ -1716,6 +1755,12 @@ p {
   }
 }
 @media (min-width: 700px) {
+  .logo {
+    padding: 20px 24px 38px;
+  }
+  .page-footer .logo {
+    padding: 16px 2px 40px;
+  }
   .icon-logotype-white-1 {
     display: none;
   }
@@ -1724,6 +1769,10 @@ p {
   }
 }
 @media (min-width: 992px) {
+  .logo {
+    margin: 0;
+    padding: 20px 10px 21px;
+  }
   .icon-logotype-white-3,
   .icon-logotype-blue-3 {
     display: inline-block;
@@ -1772,6 +1821,12 @@ p {
   }
   .btn--fixed {
     margin-bottom: 45px;
+  }
+}
+@media (min-width: 992px) {
+  .btn--fixed {
+    margin-bottom: 67px;
+    margin-left: 8px;
   }
 }
 .intro {
@@ -1889,7 +1944,7 @@ p {
     padding-bottom: 55px;
   }
   .intro-desc__apps-list li {
-    margin: 0 17px 0 15px;
+    margin: 0 10px 0 23px;
   }
 }
 .box {
@@ -1917,6 +1972,9 @@ p {
 .box__container--features {
   margin-top: -58px;
 }
+.box__container--price {
+  padding: 50px 0 35px;
+}
 .box--angle {
   margin-bottom: -77px;
   height: 70px;
@@ -1935,11 +1993,20 @@ p {
   .box__container--captions {
     padding: 49px 0;
   }
-  .box__container--captions .page-caption:last-child {
-    padding: 0 50px;
-  }
   .box__container--features {
     padding-bottom: 0;
+  }
+  .box__container--price {
+    padding: 0 0 50px;
+  }
+}
+@media (min-width: 992px) {
+  .box__container--captions {
+    padding: 66px 0 83px;
+  }
+  .box__container--features {
+    padding: 0;
+    margin-top: -115px;
   }
 }
 @media (min-width: 1450px) {
@@ -1995,7 +2062,7 @@ p {
   font-size: 0;
 }
 .slider--tables {
-  padding: 0 22px 0 18px;
+  padding: 0 25px 0 18px;
 }
 .slider-controls {
   position: absolute;
@@ -2110,7 +2177,7 @@ input[id^="btn-"] {
   line-height: 30px;
   vertical-align: middle;
 }
-.price-table td .check {
+.price-table .check {
   float: right;
   color: transparent;
   font: 0/0 a;
@@ -2168,17 +2235,40 @@ input[id^="btn-"] {
       -ms-transform: rotate(-132deg);
           transform: rotate(-132deg);
 }
+.price-table--big {
+  max-width: 620px;
+  margin: -17px auto 18px;
+}
 .price-table--big td {
   text-transform: none;
+  padding: 5px 14px 10px;
 }
-.price-table--big td .check {
+.price-table--big .check {
   float: none;
 }
-.price-table--big th:first-child {
+.price-table--big .check i {
+  width: 43px;
+}
+.price-table--big .price-table__caption {
+  font-size: 16px;
+  padding: 14px 10px;
+}
+.price-table--big .price-table__caption span {
+  padding: 0;
+  font-size: 18px;
+  line-height: 24px;
+}
+.price-table--big .price-table__caption:first-child {
   border-left: none;
 }
-.price-table--big th:last-child {
+.price-table--big .price-table__caption:last-child {
   border-right: none;
+}
+@media (min-width: 700px) {
+  .price-table__caption--flag:before {
+    left: -37px;
+    top: 4px;
+  }
 }
 .features {
   text-align: center;
@@ -2282,7 +2372,11 @@ input[id^="btn-"] {
 }
 @media (min-width: 992px) {
   .effect {
+    padding: 22px 0;
     background: #F2F2F2;
+  }
+  .effect__timer {
+    padding-left: 0;
   }
   .effect__timer svg {
     height: 360px;
@@ -2291,7 +2385,7 @@ input[id^="btn-"] {
   }
   .effect__timer span {
     top: 80px;
-    left: 42px;
+    left: 28px;
     width: 245px;
     height: 245px;
     font-size: 120px;
@@ -2301,12 +2395,27 @@ input[id^="btn-"] {
   }
 }
 .reviews {
-  margin: 0;
-  padding-top: 14px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 700px;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+  padding-top: 39px;
   text-align: center;
 }
 .reviews .icon-quotes {
   display: none;
+  height: 130px;
+  background-position: 50% 50%;
 }
 .reviews__author {
   font-size: 18px;
@@ -2323,11 +2432,18 @@ input[id^="btn-"] {
   line-height: 30px;
 }
 @media (min-width: 700px) {
+  .reviews {
+    padding-top: 11px;
+  }
   .reviews__text {
+    padding-bottom: 21px;
     font-size: 18px;
   }
   .reviews__author {
     font-size: 20px;
+    -webkit-order: 3;
+        -ms-flex-order: 3;
+            order: 3;
   }
   .reviews__author small {
     display: block;
@@ -2341,6 +2457,8 @@ input[id^="btn-"] {
     display: inline-block;
   }
   .reviews__text {
+    padding-top: 15px;
+    padding-bottom: 20px;
     font-size: 18px;
   }
   .reviews__author {
@@ -2395,10 +2513,17 @@ input[id^="btn-"] {
     font-size: 40px;
     line-height: 48px;
     font-weight: 300;
+    margin-bottom: 28px;
   }
   .contacts__map {
-    height: 370px;
-    background: #f2f2f2 url(../img/map.png) 50% 100% no-repeat;
+    height: 363px;
+    background: #f2f2f2 url(../img/map.png) 50% 64% no-repeat;
+  }
+  .contacts__list {
+    min-height: 84px;
+  }
+  .contacts .contacts__list dd {
+    line-height: 31px;
   }
 }
 @media (min-width: 1100px) {
