--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -24,6 +24,10 @@
     &--features {
       margin-top: -58px;
     }
+
+    &--price {
+      padding: 50px 0 35px;
+    }
   }
 }
 
@@ -46,13 +50,22 @@
   }
   .box__container--captions {
     padding: 49px 0;
-
-    .page-caption:last-child {
-      padding: 0 50px;
-    }
   }
   .box__container--features {
     padding-bottom: 0;
+  }
+  .box__container--price {
+    padding: 0 0 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .box__container--captions {
+    padding: 66px 0 83px;
+  }
+  .box__container--features {
+    padding: 0;
+    margin-top: -115px;
   }
 }
 
