--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -43,3 +43,10 @@
     margin-bottom: 45px;
   }
 }
+
+@media (min-width: 992px) {
+  .btn--fixed {
+    margin-bottom: 67px;
+    margin-left: 8px;
+  }
+}
