--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -1,7 +1,7 @@
 .logo {
   float: left;
   margin: 0 0 0 15px;
-  padding: 16px 5px 21px;
+  padding: 6px 5px 17px;
 
   a {
     color: transparent;
@@ -26,6 +26,12 @@
   }
 }
 @media (min-width: 700px) {
+  .logo {
+    padding: 20px 24px 38px;
+  }
+  .page-footer .logo {
+    padding: 16px 2px 40px;
+  }
   .icon-logotype-white-1 {
     display: none;
   }
@@ -35,6 +41,10 @@
 }
 
 @media (min-width: 992px) {
+  .logo {
+    margin: 0;
+    padding: 20px 10px 21px;
+  }
   .icon-logotype-white-3,
   .icon-logotype-blue-3 {
     display: inline-block;
