--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -2,10 +2,16 @@
   overflow: hidden;
 
   &__container {
-    padding: 33px 0 0px;
+    .clearfix;
+    padding: 24px 0 0px;
   }
 }
 
+@media (min-width: 700px) {
+  .page-footer__container {
+    padding: 11px 0 0;
+  }
+}
 
 
 
