--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,12 +1,3 @@
-.page-caption {
-  padding: 16px 0;
-  font-size: @fz-page-caption;
-  font-weight: @fw-light;
-  line-height: 28px;
-  text-align: center;
-}
-
-
 .page-header {
   .bg(#000,50%);
   transition: background .4s;
@@ -165,13 +156,6 @@
 }
 
 
-@media (min-width: 700px) { 
-  .page-caption {
-    .text-font (40px, 48px, @fw-light);
-    padding: 0;
-  }
-}
-
 @media (min-width: 992px) {
   .nav-toggle {
     display: none;
@@ -203,7 +187,6 @@
     color: @white;
     padding: 10px 0;
     text-transform: none;
-    // border-bottom: 2px solid transparent; 
   }
   
   .main-nav ul > li > a:after {
@@ -258,7 +241,7 @@
 }
 
 @media (min-width: 1100px) {
-  .page-caption {
-    .text-font (50px, 60px, @fw-light);
+  .main-nav ul > li {
+    padding: 34px 0 41px;
   }
 }
