--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,10 +1,18 @@
 .reviews {
-  margin: 0;
-  padding-top: 14px;
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding-top: 39px;
   text-align: center;
   
   .icon-quotes {
     display: none;
+    height: 130px;
+    background-position: 50% 50%;
   }
 
   &__author {
@@ -25,11 +33,16 @@
 
 
 @media (min-width: 700px) {
+  .reviews {
+    padding-top: 11px;
+  }
   .reviews__text {
+    padding-bottom: 21px;
     font-size: 18px;
   }
   .reviews__author {
     font-size: 20px;
+    order: 3;
 
     small {
       display: block;
@@ -43,6 +56,8 @@
     display: inline-block;
   }
   .reviews__text {
+    padding-top: 15px;
+    padding-bottom: 20px;
     font-size: 18px;
   }
   .reviews__author {
