slick slider + clean task + cmq task added

--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,3 +1,4 @@
+//table slider controls
 .slider__pagination {
   text-align: center;
   padding: 14px 0;
@@ -105,4 +106,20 @@ input[id^="btn-"] {
   border: 3px solid @base-color;
   background-color: @white;
   cursor: default;
+}
+
+
+// slick slider controls
+
+.slick-dots li.slick-active button:before {
+  content: '';
+  top: 4px;
+  left: 4px;
+  width: 12px;
+  height: 12px;
+  border: 3px solid @base-color;
+  background-color: @white;
+  cursor: default;
+  border-radius: 50%;
+  opacity: 1;
 }
