--- a/svg/css/grunticon-icons.data.png.css
+++ b/svg/css/grunticon-icons.data.png.css
@@ -2,7 +2,7 @@
 .icon-android-logo {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/android-logo.png');
+  background-image: url('png/android-logo.png');
   background-repeat: no-repeat;
   width: 42px;
   height: 8133px;
@@ -32,7 +32,7 @@
 .icon-glukhanko-down {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/glukhanko-down.png');
+  background-image: url('png/glukhanko-down.png');
   background-repeat: no-repeat;
   width: 26px;
   height: 24677px;
@@ -42,7 +42,7 @@
 .icon-glukhanko-hvr {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/glukhanko-hvr.png');
+  background-image: url('png/glukhanko-hvr.png');
   background-repeat: no-repeat;
   width: 26px;
   height: 24677px;
@@ -52,7 +52,7 @@
 .icon-glukhanko {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/glukhanko.png');
+  background-image: url('png/glukhanko.png');
   background-repeat: no-repeat;
   width: 26px;
   height: 24677px;
@@ -92,7 +92,7 @@
 .icon-logo-mob {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logo-mob.png');
+  background-image: url('png/logo-mob.png');
   background-repeat: no-repeat;
   width: 74px;
   height: 3221px;
@@ -102,7 +102,7 @@
 .icon-logotype-blue-2 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-blue-2.png');
+  background-image: url('png/logotype-blue-2.png');
   background-repeat: no-repeat;
   width: 146px;
   height: 3877px;
@@ -112,7 +112,7 @@
 .icon-logotype-blue-3 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-blue-3.png');
+  background-image: url('png/logotype-blue-3.png');
   background-repeat: no-repeat;
   width: 146px;
   height: 5141px;
@@ -122,7 +122,7 @@
 .icon-logotype-white-1 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-white-1.png');
+  background-image: url('png/logotype-white-1.png');
   background-repeat: no-repeat;
   width: 74px;
   height: 3253px;
@@ -132,7 +132,7 @@
 .icon-logotype-white-2-hvr {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-white-2-hvr.png');
+  background-image: url('png/logotype-white-2-hvr.png');
   background-repeat: no-repeat;
   width: 146px;
   height: 3877px;
@@ -142,7 +142,7 @@
 .icon-logotype-white-2 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-white-2.png');
+  background-image: url('png/logotype-white-2.png');
   background-repeat: no-repeat;
   width: 146px;
   height: 3877px;
@@ -152,7 +152,7 @@
 .icon-logotype-white-3 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/logotype-white-3.png');
+  background-image: url('png/logotype-white-3.png');
   background-repeat: no-repeat;
   width: 146px;
   height: 5141px;
@@ -172,7 +172,7 @@
 .icon-quotes {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/quotes.png');
+  background-image: url('png/quotes.png');
   background-repeat: no-repeat;
   width: 79px;
   height: 3061px;
@@ -182,7 +182,7 @@
 .icon-smiley-1 {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('svg/png/smiley-1.png');
+  background-image: url('png/smiley-1.png');
   background-repeat: no-repeat;
   width: 77px;
   height: 4165px;
