--- a/less/base/layout.less
+++ b/less/base/layout.less
@@ -1,8 +1,8 @@
-.page-wrap {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
+// .page-wrap {
+//   display: table;
+//   width: 100%;
+//   height: 100%;
+// }
 .page-header {
   position: fixed;
   top: 0;
@@ -10,10 +10,10 @@
   right: 0;
   z-index: 100;
 }
-.page-footer {
-  display:table-row;
-  height: 1px;
-}
+// .page-footer {
+//   display:table-row;
+//   height: 1px;
+// }
 
 @media (min-width: 700px) and (max-width: 992px) {
   .col-md--pl0 {
