--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -111,6 +111,16 @@ input[id^="btn-"] {
 
 // slick slider controls
 
+.slick-slider {
+  padding-bottom: 30px;
+}
+.slick-dots {
+  bottom: -7px;
+  margin: 0;
+}
+.slick-dots li {
+  margin: 0px 2px;
+}
 .slick-dots li.slick-active button:before {
   content: '';
   top: 4px;
