--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -26,7 +26,7 @@
     }
 
     &--price {
-      padding: 50px 0 35px;
+      padding: 41px 0 35px;
     }
   }
 }
@@ -56,6 +56,7 @@
   }
   .box__container--price {
     padding: 0 0 50px;
+    margin-top: -8px;
   }
 }
 
