--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -70,12 +70,22 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .box--angle {
+    margin-bottom: -183px;
+    height: 216px;
+  }
+  .box--footer {
+    margin-bottom: -40px;
+  }
+}
+
 @media (min-width: 1450px) {
   .box--shear:before {
     transform: rotate(-3.7deg);
   }
   .box--angle {
-    margin-bottom: -255px;
+    margin-bottom: -214px;
     height: 250px;
   }
 }
