--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -41,7 +41,8 @@
 
 @media (min-width: 992px) {
   .copyright {
-    padding: 28px 0 0 80px;
+    padding: 28px 0 0 10px;
+    float: right;
   }
   .copyright span {
     font-size: 18px;
