--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -45,6 +45,9 @@
     margin: 0;
     padding: 20px 10px 21px;
   }
+  .page-footer .logo {
+    padding: 16px 0 40px;
+  }
   .icon-logotype-white-3,
   .icon-logotype-blue-3 {
     display: inline-block;
