--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -242,6 +242,7 @@
 
 @media (min-width: 1100px) {
   .main-nav ul > li {
-    padding: 34px 0 41px;
+    padding: 39px 0 41px;
+    text-align: right;
   }
 }
