--- a/less/blocks/socials.less
+++ b/less/blocks/socials.less
@@ -46,6 +46,12 @@
     padding: 55px 0;
   }
   .social {
-    padding: 22px 0px 0 0px;
+    padding: 22px 0 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .social {
+    padding: 22px 0 0 10px;
   }
 }
