--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -58,6 +58,10 @@
 @media (min-width: 1100px) { 
   .contacts__caption {
     .text-font (50px, 60px, @fw-light);
+    margin-bottom: 40px;
+  }
+  .contacts__map {
+    height: 505px;
   }
 }
 
