--- a/less/blocks/price-table.less
+++ b/less/blocks/price-table.less
@@ -154,6 +154,9 @@
       border-right: none;
     }
   }
+  .price-table__caption--null {
+    border-left: none;
+  }
 }
 
 
@@ -166,5 +169,24 @@
 }
 
 @media (min-width: 1200px) {
-
+  .box__container--price {
+    padding-top: 0px;
+    margin-top: -15px;
+  }
+  .price-table--big {
+    max-width: 100%;
+    margin: 0 auto 45px;
+  }
+  .price-table--big .price-table__caption {
+    font-size: 18px;
+    padding: 17px 10px;
+  }
+  .price-table--big .price-table__caption span {
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .price-table--big td {
+    padding: 12px 16px 17px;
+    font-size: 18px;
+  }
 }
